--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,17 +6,17 @@
         <h2 class="addBook">Adauga o carte citita</h2>
 
         <div class="form-floating mb-3 w-100">
-            <input type="text" class="form-control" id="floatingInput" placeholder="name@example.com">
+            <input type="text" class="form-control" name="titlu" id="floatingInput" placeholder="name@example.com">
             <label for="floatingInput">Titlu</label>
         </div>
 
         <div class="form-floating mb-3 w-100">
-            <input type="text" class="form-control" id="floatingPassword" placeholder="Password">
+            <input type="text" class="form-control" name="autor" id="floatingPassword" placeholder="Password">
             <label for="floatingPassword">Autor</label>
         </div>
 
         <div class="form-floating w-100">
-            <textarea class="form-control" placeholder="Adauga o descriere" id="floatingTextarea"></textarea>
+            <textarea class="form-control" placeholder="Adauga o descriere" name="descriere" id="floatingTextarea"></textarea>
             <label for="floatingTextarea">Descriere</label>
           </div>
 
