--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -23,3 +23,42 @@ form
 {
     background-color: #03C988;
 }
+
+
+
+@media  screen and (max-width: 767px)
+{
+    .item
+    {
+        flex-direction: column;
+        align-items: center;
+    }
+    
+    .info
+    {
+        align-items: center;
+    }
+
+    .bookCover
+{
+    height: 30vh;
+    width: 20vh;
+    border-bottom: 1px solid white;
+    margin-bottom: 5px;
+    padding-bottom: 5px;
+}
+}
+
+@media screen and (min-width: 768px)
+{
+
+    .bookCover
+    {
+        height: 30vh;
+        width: 20vh;
+        border-right: 1px solid white;
+        margin-right: 5px;
+        padding-right: 5px;
+    }
+
+}
