Add date when read a book

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -38,7 +38,7 @@
                             <input type="submit" class="btn btn-secondary" value="Edit">
                         </form>
 
-                        <form action="/delete" class="my-1 actionForm" method="post">
+                        <form action="/delete" class="my-1 mb-2 actionForm" method="post">
                             <input type="hidden" name="id" value=<%= books[i].id %>>
                             <input type="submit" class="btn btn-danger" value="Delete">
                         </form>
